--- a/DeviceManagerSystem/App.config
+++ b/DeviceManagerSystem/App.config
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <appSettings>
     <!-- Language的值只能是Chinese（中文），English（英文） -->
-    <add key="DBcfg" value="Data Source=FUSANJIE;Initial Catalog=RIFA_ZPX_DB;User ID=sa;Password=kyjj1234"/>
-    <add key="Language" value="Chinese"/>
-    <add key="ProductNum" value="1111111"/>
+    <add key="DBcfg" value="Data Source=FUSANJIE;Initial Catalog=RIFA_ZPX_DB;User ID=sa;Password=kyjj1234" />
+    <add key="Language" value="Chinese" />
+    <add key="ProductNum" value="1111111" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
