--- a/DeviceManagerSystem/DeviceManagerSystem.csproj
+++ b/DeviceManagerSystem/DeviceManagerSystem.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
