--- a/DeviceManagerSystem/App.config
+++ b/DeviceManagerSystem/App.config
@@ -7,9 +7,14 @@
     <!-- Language的值只能是Chinese（中文），English（英文） -->
     <add key="DBcfg" value="Data Source=FUSANJIE;Initial Catalog=RIFA_ZPX_DB;User ID=sa;Password=kyjj1234" />
     <add key="Language" value="Chinese" />
-    <add key="ProductNum" value="1111111" />
+    <add key="Interval" value="15" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <connectionStrings>
+    <add name="SQLiteDB" connectionString="Data\KY_MES.db"/>
+    <add name="MySqlDb" connectionString="Server=RBNF4C8VM7ZE0UQ;Initial Catalog=cmes_2019;User ID=sa;Password=kyjj1234" providerName="System.Data.SqlClient"/>
+
+  </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
@@ -21,5 +26,14 @@
         <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
+    
   </system.web>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
