--- a/CMES.Entity.SYS/CMES.Entity.SYS.csproj
+++ b/CMES.Entity.SYS/CMES.Entity.SYS.csproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -47,9 +47,12 @@
     <Compile Include="ComboboxEX.cs" />
     <Compile Include="EmployeeApi.cs" />
     <Compile Include="Faces.cs" />
+    <Compile Include="JXJHZTJKEntity.cs" />
+    <Compile Include="ldkpApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys_frequency.cs" />
     <Compile Include="S_UserInfo.cs" />
+    <Compile Include="Table_JXJHZTJKEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
