--- a/DeviceManagerSystem/DeviceManagerSystem.csproj
+++ b/DeviceManagerSystem/DeviceManagerSystem.csproj
@@ -62,6 +62,10 @@
       <HintPath>bin\Debug\DLL\HslCommunication.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\x86\Release\Lib\Newtonsoft.json\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -153,8 +157,15 @@
     <Compile Include="Others\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Others\UserLoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Others\UserLoginForm.Designer.cs">
+      <DependentUpon>UserLoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysVar.cs" />
     <Compile Include="TPM\UserAbout.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -251,6 +262,9 @@
     <EmbeddedResource Include="Others\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Others\UserLoginForm.resx">
+      <DependentUpon>UserLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -315,6 +329,7 @@
     <None Include="bin\Debug\images\pics\XiAnPicMain.png" />
     <None Include="bin\Debug\images\pics\CLDPicContent2.png" />
     <None Include="bin\x86\Release\images\CLDPicContentLz2.png" />
+    <None Include="bin\x86\Release\images\login3.jpg" />
     <Content Include="CAYALogo02.ico" />
   </ItemGroup>
   <ItemGroup>
