2020加入设备状态实时显示

--- a/CMES.Controller.SYS/CMES.Controller.SYS.csproj
+++ b/CMES.Controller.SYS/CMES.Controller.SYS.csproj
@@ -58,6 +58,7 @@
     <Compile Include="UserLogin.cs" />
     <Compile Include="UserRoleServer.cs" />
     <Compile Include="UserSynchronization.cs" />
+    <Compile Include="DeviceController.cs" />
     <Compile Include="ZtjkController.cs" />
   </ItemGroup>
   <ItemGroup>
